# ezi-thesis

./: .gitignore  app.py  fuzzy_logic.py  pyproject.toml  requirements.txt  utils.py
scripts/: imtu_ym.txt  structurize_dataset_imtu.py
test/: test_fuzzy.py  test_utils.py
